data/derived/sp14/progs/unify/prog1344.ml.out
Characters 394-395:
  if (b > 1)
          ^
Error: This expression has type int but an expression was expected of type
         float
